[project]
name = "atcoder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ac-library-python",
    "aclogin>=0.2.1",
    "more-itertools==10.7.0",
    "online-judge-tools>=11.5.1",
    "setuptools>=82.0.1",
    "sortedcontainers==2.4.0",
    "tomlkit>=0.15.0",
]

[tool.uv.sources]
ac-library-python = { git = "https://github.com/not522/ac-library-python", rev = "27fdbb71cd0d566bdeb12746db59c9d908c6b5d5" }
